# codex-antigravity-subagent

./: .gitignore  README.md
plugin/.codex-plugin/: plugin.json
plugin/agy-acp/: Cargo.toml  README.md
plugin/agy-acp/src/: adapter.rs  db.rs  main.rs  protobuf.rs  streaming.rs  types.rs
plugin/assets/antigravity-observer/: hooks.json  plugin.json
plugin/assets/antigravity-observer/scripts/: observer-hook.mjs
plugin/scripts/: build-recovery-handoff.ps1  get-session-status.ps1  install-observer.ps1  launch-agy.ps1  record-session-signal.ps1  request-recovery-handoff.mjs  start-agy-session.mjs
plugin/skills/antigravity-subagent/: SKILL.md
plugin/skills/antigravity-subagent/agents/: openai.yaml
plugin/skills/antigravity-subagent/references/: session-protocol.md
plugin/tests/: run-tests.ps1
scripts/: build-release.ps1  install.ps1
