[package]
name = "agy-acp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "ACP stdio adapter for Google Antigravity CLI (agy)"

# agy-acp is built standalone (CI builds it with `working-directory: agy-acp`, and
# the release image builds it from this directory). It is intentionally not a member
# of the root openab workspace. Declaring an empty workspace table makes this crate
# its own workspace root so `cargo build` here does not try to join the parent
# workspace and fail with "current package believes it's in a workspace when it's not".
[workspace]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
fs2 = "0.4.3"
rusqlite = { version = "=0.31.0", features = ["bundled"] }
shell-words = "1.1.0"
